--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -393,7 +393,7 @@
             if (item.moves) info += `<strong>Ходы:</strong> ${item.moves.map(m => `${m.from}/${m.to}${m.hit ? '*' : ''}`).join(' ')}<br>`;
             if (item.gnu_move) info += `<strong>Лучший ход:</strong> ${item.gnu_move}<br>`;
             if (item.is_best_move !== undefined) {
-                info += `<strong>Лучший ли ход?:</strong> ${item.is_best_move ? 'Yes' : 'No'}`;
+                info += `<strong>Лучший ли ход?:</strong> ${item.is_best_move ? 'Да' : 'Нет'}`;
             }
             document.getElementById('info').innerHTML = info;
 
