--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -143,7 +143,7 @@
 
             canvas {
                 width: 100%;
-                height: autof;
+                height: 400%;
             }
 
             #controls {
