--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -143,7 +143,7 @@
 
             canvas {
                 width: 100%;
-                height: 400%;
+                height: 2;
             }
 
             #controls {
@@ -324,7 +324,7 @@
 
         // Base Y and direction for stacking with padding
         function getBaseY(point) {
-            return (point > 12) ? 10 : 390; // Adjusted with padding: Top: start at 10, bottom: start at 390
+            return (point > 12) ? 40 : 360; // Adjusted with padding: Top: start at 10, bottom: start at 390
         }
 
         function getDy(point) {
