--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -143,7 +143,7 @@
 
             canvas {
                 width: 100%;
-                height: 2;
+                height: 100%;
             }
 
             #controls {
@@ -189,6 +189,7 @@
 
             canvas {
                 width: 100%;
+                height: 100%;
             }
 
             button {
